2007-01-26  Laurent Sansonetti  <lsansonetti@apple.com>

	* COPYRIGHT,
	  */**/*.{rb,c,h}:
	Updated copyright marks.

2007-01-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa_err.c,
	  src/rbosa.c,
	  src/rbosa.h:
	Better application-level error handling. Now converting the error numbers to
	human-readable sentences. 

	* tests/tc_textedit.rb,
	  src/lib/rbosa_properties.rb,
	  src/lib/rbosa.rb:
	Added translation support for property codes. Now translating themi when 
	converting when converting records from OSA to Ruby (as a Hash object). Added
	a text case.

	* src/lib/rbosa.rb:
	- Added OSA -> Ruby 'TIFF' conversion ;
	- Fixed the Ruby -> OSA 'list_of_*' conversion.

	* tests/tc_itunes.rb,
	  tests/tc_ichat.rb,
	  tests/as.rb:
	Added some new tests to check RubyOSA with iTunes and iChat.
	Uses NSAppleScript through RubyCocoa to verify what has been done.

	* AUTHORS:
	Added Michail.

2007-01-25  Michail Pishchagin  <mblsha@gmail.com>

	* src/lib/rbosa.rb:
	Make sure '$' and '=' are escaped.

2007-01-21  Mike Naberezny <mike@maintainable.com>

	* sample/:
	Sorted samples into subdirectories by application.

2007-01-17  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c:
	Fixed 64-bit build.

2007-01-11  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Make sure the converted 'alis' paths are unescaped. Thanks James MacAulay. 

2007-01-07  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/AddressBook_inspect.rb:
	Modified to handle application-level errors that Address Book could
	raise when trying to format malformed addresses.

	* src/rbosa.c:
	Fixed handling of application-level errors.

	* tests/testall.rb,
	  src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c,
	  src/rbosa.h,
	  src/rbosa_conv.c,
	  COPYRIGHT,
	  extconf.rb,
	  bin/rdoc-osa:
	Updated copyright date to 2007.

	* AUTHORS:
	Added Stefan.

2007-01-07  Stefan Saasen  <s@juretta.com>

	* sample/AddressBook_inspect.rb: